syntax = "proto3";

package tutorial;

option java_package = "proto";
option java_outer_classname = "ResponseLeaderInfo";

message ResponseLeaderAndMembersInfoDetails {
  int32 messageId = 1;
  bool infoAvailable = 2;
  string leaderName = 3;
  string leaderIP = 4;
  int32 leaderPort = 5;
  int32 brokerId = 6;
  repeated bytes members = 7;
}